--- a/index.html
+++ b/index.html
@@ -110,6 +110,54 @@
 
         </section>
 
+        <section>
+            <h2>Our Portfolio</h2>
+            <ul>
+                <li>
+                    <img src="./images/banking.jpg" alt="banking"
+                    width="360"
+                    height="300">
+                    <h3>Banking App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/payment.jpg" alt="phone payment" 
+                    width="360" 
+                    height="300">
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/meditation.jpg" alt="laptop and phone" 
+                    width="360" 
+                    height="300">
+                    <h3>Meditation App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/taxi.jpg" alt="helm" 
+                    width="360" 
+                    height="300">
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/screen.jpg" alt="screen Illustrations" 
+                    width="360" 
+                    height="300">
+                    <h3>Screen Illustrations</h3>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/courses.jpg" alt="girl with headphones" 
+                    width="360" 
+                    height="300">
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
+                </li>
+            </ul>
+        </section>
+
     </main>
     <footer>
         <a href="./index.html">WebStudio</a>
