--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <a href="./index.html" class="header-logo link">Web<span class="accent">Studio</span></a>
             
             <ul class="list">
+                <li>
+                    <a href="./index.html"></a>
+                </li>
                 <li class="item">
                     <a href="" class="link">Studio</a>
                 </li>
