--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <a href="./index.html" class="header-logo link">Web<span class="accent">Studio</span></a>
             
             <ul class="list">
-                <li>
-                    <a href="./index.html"></a>
+                <li class="item">
+                    <a href="./index.html" class="link"></a>
                 </li>
                 <li class="item">
                     <a href="" class="link">Studio</a>
