--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             
             <ul class="list">
                 <li class="item">
-                    <a href="" class="link">Studio</a>
+                    <a href="./index.html" class="link">Studio</a>
                 </li>
                 <li class="item">
                     <a href="" class="link">Portfolio</a>
